[bug]#4765 temporary fix no-squared icons overflow

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -337,6 +337,8 @@ i.edumedia-large, i.type.edumedia, i.edumedia{
 i.edumedia-large::before, i.type.edumedia::before, i.edumedia::before{
   content: "\e887";
   color: @cyan;
+  font-size: 23px;
+  vertical-align: middle;
 }
 
 i.agenda-large, i.type.agenda, i.agenda{
@@ -416,8 +418,63 @@ i.pronote-large, i.type.pronote, i.pronote{
 }
 i.pronote-large::before, i.type.pronote::before, i.pronote::before{
   content: '\e82a';
-  color: @red;
+  color: @purple;
+  font-size: 23px;
+  vertical-align: middle;
 }
+
+i.charlemagne-large, i.type.charlemagne, i.charlemagne{
+  .fonticon;
+}
+i.charlemagne-large::before, i.type.charlemagne::before, i.charlemagne::before{
+  content: '\e885';
+  color: @red;
+  font-size: 23px;
+  vertical-align: middle;
+}
+
+i.scolinfo-large, i.type.scolinfo, i.scolinfo{
+  .fonticon;
+}
+i.scolinfo-large::before, i.type.scolinfo::before, i.scolinfo::before{
+  content: '\e886';
+  color: @purple;
+  font-size: 23px;
+  vertical-align: middle;
+}
+
+i.paraschool-large, i.type.paraschool, i.paraschool{
+  .fonticon;
+}
+i.paraschool-large::before, i.type.paraschool::before, i.paraschool::before{
+  content: '\e82d';
+  color: @purple;
+  font-size: 21px;
+  vertical-align: middle;
+}
+
+i.vie-scolaire-large, i.type.vie-scolaire, i.vie-scolaire{
+  .fonticon;
+}
+i.vie-scolaire-large::before, i.type.vie-scolaire::before, i.vie-scolaire::before{
+  content: '\e879';
+  color: @yellow;
+  font-size: 23px;
+  vertical-align: middle;
+}
+
+i.pro-eps-large, i.type.pro-eps, i.pro-eps{
+  .fonticon;
+}
+i.pro-eps-large::before, i.type.pro-eps::before, i.pro-eps::before{
+  content: '\e884';
+  color: @cyan;
+  font-size: 23px;
+  vertical-align: middle;
+}
+
+
+
 
 /* ico for main apps */
 
@@ -628,6 +685,10 @@ i.statistics-large::before, i.type.statistics::before, i.statistics::before{
   content: '\e810';
   color: @purple;
 }
+
+
+
+
 
 /* indication type icons */
 
